--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,16 +1,27 @@
-<style> 
-body { display:grid; place-items:center; height:100%; margin:0; }
-main { height:600px; width:600px; }
-div { display:grid; place-items:center; border:1px solid lightgrey; }
-.c-x { background-color:red; }
-.c-0 { background-color:grey; }
-.c-1 { background-color:yellow; }
-.c-2 { background-color:orange; }
-.c-3 { background-color:red; }
-.c-4 { background-color:purple; }
-</style>
+<!DOCTYPE html>
 
-<main></main>
+<html>
+	
+	<head>
+		<title>Minesweeper</title>
+		
+		<style> 
+			body { display:grid; place-items:center; height:100%; margin:0; }
+			main { height:600px; width:600px; }
+			div { display:grid; place-items:center; border:1px solid lightgrey; }
+			.c-x { background-color:red; }
+			.c-0 { background-color:grey; }
+			.c-1 { background-color:yellow; }
+			.c-2 { background-color:orange; }
+			.c-3 { background-color:red; }
+			.c-4 { background-color:purple; }
+		</style>
+		
+	</head>
+	
+	<body>
+
+		<main></main>
 
 <script>
 
@@ -101,3 +112,7 @@ data.forEach(($v, $i) => {
 });
 
 </script>
+
+	</body>
+	
+</html>
